--- a/kubernetes-manifests/recommendationservice.yaml
+++ b/kubernetes-manifests/recommendationservice.yaml
@@ -19,6 +19,7 @@ metadata:
   labels:
     app: recommendationservice
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: recommendationservice
