--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -44,7 +44,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: cartservice
+        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/cartservice:v0.10.3
         ports:
         - containerPort: 7070
         env:
