--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -26,7 +26,7 @@ spec:
   template:
     metadata:
       labels:
-        app: checkoutservice
+        app: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice:v0.10.3
     spec:
       serviceAccountName: checkoutservice
       securityContext:
