--- a/kubernetes-manifests/currencyservice.yaml
+++ b/kubernetes-manifests/currencyservice.yaml
@@ -44,7 +44,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: currencyservice
+        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend:v0.10.3
         ports:
         - name: grpc
           containerPort: 7000
