--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -44,7 +44,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: paymentservice
+        image: us-central1-docker.pkg.dev/google-samples/microservices-demo/paymentservice:v0.10.3
         ports:
         - containerPort: 50051
         env:
