Patch the kube manifests

--- a/kubernetes-manifests/productcatalogservice.yaml
+++ b/kubernetes-manifests/productcatalogservice.yaml
@@ -48,6 +48,8 @@ spec:
         ports:
         - containerPort: 3550
         env:
+        - name: PRODUCT_CATALOG_SERVICE_ADDR
+          value: "productcatalogservice:3550"
         - name: PORT
           value: "3550"
         - name: DISABLE_PROFILER
