--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -26,7 +26,7 @@ spec:
   template:
     metadata:
       labels:
-        app: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice:v0.10.3
+        app: checkoutservice
     spec:
       serviceAccountName: checkoutservice
       securityContext:
@@ -43,7 +43,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: checkoutservice
+          image: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice:v0.10.3
           ports:
           - containerPort: 5050
           readinessProbe:
