--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ obj/
 pkg/
 release/wi-kubernetes-manifests.yaml
 vendor/
+# Nodejs
+npm-debug.log*
+yarn-error.log*
+yarn-debug.log*
+# node modules
+node_modules/
+
