add hpa, priority enabled

--- a/release/kubernetes-volcano.yaml
+++ b/release/kubernetes-volcano.yaml
@@ -33,6 +33,7 @@ spec:
       labels:
         app: emailservice
     spec:
+      priorityClassName: high-priority
       schedulerName: volcano
       serviceAccountName: emailservice
       terminationGracePeriodSeconds: 5
@@ -59,11 +60,11 @@ spec:
         - name: DISABLE_PROFILER
           value: "1"
         readinessProbe:
-          periodSeconds: 5
+          periodSeconds: 10
           grpc:
             port: 8080
         livenessProbe:
-          periodSeconds: 5
+          periodSeconds: 10
           grpc:
             port: 8080
         resources:
@@ -106,6 +107,7 @@ spec:
       labels:
         app: checkoutservice
     spec:
+      priorityClassName: high-priority
       schedulerName: volcano
       serviceAccountName: checkoutservice
       securityContext:
@@ -187,6 +189,7 @@ spec:
       labels:
         app: recommendationservice
     spec:
+      priorityClassName: high-priority
       schedulerName: volcano
       serviceAccountName: recommendationservice
       terminationGracePeriodSeconds: 5
@@ -208,15 +211,15 @@ spec:
         ports:
         - containerPort: 8080
         readinessProbe:
-          periodSeconds: 10
+          periodSeconds: 15
           grpc:
             port: 8080
-          timeoutSeconds: 5
+          timeoutSeconds: 15
         livenessProbe:
-          periodSeconds: 10
+          periodSeconds: 15
           grpc:
             port: 8080
-          timeoutSeconds: 5
+          timeoutSeconds: 15
         env:
         - name: PORT
           value: "8080"
@@ -268,6 +271,7 @@ spec:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: frontend
       securityContext:
         fsGroup: 1000
@@ -392,6 +396,7 @@ spec:
         app: paymentservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: paymentservice
       terminationGracePeriodSeconds: 5
       securityContext:
@@ -463,6 +468,7 @@ spec:
         app: productcatalogservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: productcatalogservice
       terminationGracePeriodSeconds: 5
       securityContext:
@@ -534,6 +540,7 @@ spec:
         app: cartservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: cartservice
       terminationGracePeriodSeconds: 5
       securityContext:
@@ -606,6 +613,7 @@ spec:
         app: redis-cart
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       securityContext:
         fsGroup: 1000
         runAsGroup: 1000
@@ -624,11 +632,11 @@ spec:
         ports:
         - containerPort: 6379
         readinessProbe:
-          periodSeconds: 5
+          periodSeconds: 10
           tcpSocket:
             port: 6379
         livenessProbe:
-          periodSeconds: 5
+          periodSeconds: 10
           tcpSocket:
             port: 6379
         volumeMounts:
@@ -636,8 +644,8 @@ spec:
           name: redis-data
         resources:
           requests:
-            cpu: 75m
-            memory: 200Mi
+            cpu: 175m
+            memory: 400Mi
       volumes:
       - name: redis-data
         emptyDir: {}
@@ -673,6 +681,7 @@ spec:
         app: currencyservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: currencyservice
       terminationGracePeriodSeconds: 5
       securityContext:
@@ -701,15 +710,15 @@ spec:
         readinessProbe:
           grpc:
             port: 7000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 10
           periodSeconds: 10
-          timeoutSeconds: 5
+          timeoutSeconds: 10
         livenessProbe:
           grpc:
             port: 7000
-          initialDelaySeconds: 5
+          initialDelaySeconds: 10
           periodSeconds: 10
-          timeoutSeconds: 5
+          timeoutSeconds: 10
         resources:
           requests:
             cpu: 100m
@@ -751,6 +760,7 @@ spec:
         app: shippingservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: shippingservice
       securityContext:
         fsGroup: 1000
@@ -775,7 +785,7 @@ spec:
         - name: DISABLE_PROFILER
           value: "1"
         readinessProbe:
-          periodSeconds: 5
+          periodSeconds: 10
           grpc:
             port: 50051
         livenessProbe:
@@ -822,6 +832,7 @@ spec:
         app: adservice
     spec:
       schedulerName: volcano
+      priorityClassName: high-priority
       serviceAccountName: adservice
       terminationGracePeriodSeconds: 5
       securityContext:
