--- a/queues.yaml
+++ b/queues.yaml
@@ -3,21 +3,9 @@ kind: Queue
 metadata:
   name: mq
 spec:
-  weight: 100
+  weight: 10000
   reclaimable: false
-  capability:
-    cpu: "100"
-    memory: "200Gi"
-  deserved: 90   # High deserved ratio → high priority for resource reclaim
----
-apiVersion: scheduling.volcano.sh/v1beta1
-kind: Queue
-metadata:
-  name: bq
-spec:
-  weight: 10
-  reclaimable: true
-  capability:
-    cpu: "200"
-    memory: "400Gi"
-  deserved: 10   # Low deserved ratio → can give up resources when needed
+  deserved:
+    cpu: "20000"
+    memory: "2000Gi"
+  # High deserved ratio → high priority for resource reclaim
