--- a/tf_tasks/tf_alex_mini-2.yaml
+++ b/tf_tasks/tf_alex_mini-2.yaml
@@ -35,6 +35,7 @@ kind: Job
 metadata:
   generateName: tensorflow-benchmark-alex-mini-v2-
 spec:
+  queue: bq
   minAvailable: 3
   schedulerName: volcano
   plugins:
